name:                battleship
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/battleship#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable battleship
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >=4.9, 
                       containers,
                       vty, 
                       brick,
                       network-simple,
                       bytestring,
                       utf8-string,
                       split
  other-modules:       UI, 
                       State,
                       Network,
                       Types,
                       Control,
                       Transition,
                       Game
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -W -threaded
