name:                battleship
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/battleship#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

library 
  hs-source-dirs:      src
  build-depends:       base >=4.9, 
                       containers,
                       vty, 
                       brick,
                       network-simple,
                       bytestring,
                       utf8-string,
                       split,
                       QuickCheck,
                       text
  exposed-modules:     Lib, 
                       UI, 
                       State,
                       Network,
                       Types,
                       Control,
                       Transition,
                       Game
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -W

executable battleship-exec
  hs-source-dirs:      app 
  main-is:             Main.hs
  build-depends:       base >=4.9, 
                       battleship
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -W -threaded

test-suite battleship-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base >=4.9, 
                       tasty, 
                       tasty-quickcheck, 
                       QuickCheck, 
                       battleship
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
